--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -52,7 +52,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Services - Home Removals</title>
+    <title>Contact Us - Home Removals</title>
   </head>
   <body>
     <header>
@@ -94,9 +94,9 @@
           <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./aboutus.html">About Us</a></li>
-            <li class="active"><a href="./services.html">Services</a></li>
+            <li><a href="./services.html">Services</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./contact.html">Contact Us</a></li>
+            <li class="active"><a href="./contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="nav_right">
@@ -110,131 +110,18 @@
       </div>
     </div>
 
-    <main class="services_page">
+    <main class="services_page mb-5">
       <div class="innerBanner">
         <div class="container">
           <ul>
             <li><a href="./index.html">Home</a></li>
             <li>/</li>
-            <li>Services</li>
+            <li>Contact Us</li>
           </ul>
 
-          <h2>Services</h2>
-          <p>Comprehensive Moving Solutions for Your Home or Business</p>
+          <h2>Contact Us</h2>
         </div>
       </div>
-
-      <section class="service_sec">
-        <div class="container">
-          <div class="box box1">
-            <h3>House Removal London</h3>
-            <p>
-              Quick Trip Removal offers the best removals services in London. We
-              carry all our moves with a well-planned strategy. Our free on-site
-              survey facility is not merely a form-filling exercise. Still, the
-              professional surveyors discuss all the details. They will draw a
-              formal plan in terms of how the complete move will be carried out.
-              We specialise in all Domestic and House Moves.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box2">
-            <h3>Furniture Removal London</h3>
-            <p>
-              Since pianos and house furniture are extremely big and heavy,
-              their transportation is an issue. However big and heavy furniture
-              can be easily transported in our vans. we are here to help you.
-              Quick Trip Removals is a professional furniture mover Company in
-              London.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box1">
-            <h3>Office Removal London</h3>
-            <p>
-              Office Removal is a specialised service offered to businesses when
-              they need to move their offices to a new location. They are
-              different from house removals in terms of time, budget,
-              organisation, packing methods and supplies. Suppose your inventory
-              can be dismantled or fit in moving crates. In that case, there are
-              no restrictions to the size or type of organisations Top Removals
-              can relocate.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box2">
-            <h3>Container Removals</h3>
-            <p>
-              Starting from the movement of a teapoy to your king-size beds, our
-              people take care of everything, which also includes your big or
-              small container. A container is something that is used everywhere
-              from a household sphere to commercial space to an industrial unit.
-              We understand the transportation of these containers requires
-              utmost safety assurance. With us, your items are properly
-              packaged, loaded, moved, and unloaded.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box1">
-            <h3>Commercial Removals</h3>
-            <p>
-              If you are concerned with dealing with the packaged or unpackaged
-              goods and items, commercial removals services are for you. When
-              it’s us at Quick Trip Removals, the movement of stored goods from
-              one place to another is safe and secure. As a manufacturer, you
-              can ensure that your products reach customers in good condition
-              without hampering your reputation in any way. In addition, timely
-              deliveries are assured when it’s our experts with you.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box2">
-            <h3>Overseas Removals</h3>
-            <p>
-              Are you moving from the UK or returning from overseas? If you want
-              to have international removals services, Quick Trip Removals is
-              for you. While there are multiple service providers available
-              around the corner to help you get the best services, you rarely
-              find someone with overseas removals services.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box1">
-            <h3>Compare Removals</h3>
-            <p>
-              We move your office/house goods from one place to another in
-              beneficial manners. Our tension-free service can save your time
-              and money. We give the inner calm that your move is being cared
-              for by highly qualified and professional removalists. On our
-              platform, we do not make fake promises. Instead, we always try to
-              give you practical reasons to choose us.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box2">
-            <h3>Man With A Van Removals</h3>
-            <p>
-              Our man with a van service takes care of your transport
-              requirements. We provide a professional service at too competing
-              pricing. When you use our man with a van service, you'll be
-              assigned your move coordinator to ensure your man and van service
-              is as seamless as possible.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-          <div class="box box1">
-            <h3>Packaging Materials</h3>
-            <p>
-              Quick Trip Removals is available here with Packing Solution to all
-              locations in London the surrounding areas. Regardless of whatever
-              kind of products you want us to move, utilization of superior
-              quality packaging products is essential for keeping them intact.
-              We put the utmost concentration on this very vital fact.
-            </p>
-            <a href="#">Get a Quote</a>
-          </div>
-        </div>
-      </section>
     </main>
 
     <footer>
@@ -300,8 +187,8 @@
         </form>
         <div class="policyTerms">
           <p>
-            By clicking Send, I agree to House Mover Privacy Policy and Terms
-            of Service.
+            By clicking Send, I agree to House Mover Privacy Policy and Terms of
+            Service.
           </p>
           <div>
             <div class="socialMedia">
@@ -335,7 +222,9 @@
         <div class="info">
           <h4>Contact US</h4>
           <a href="tel:0318-0126925"> 0318-0126925 </a>
-          <a href="muhammadyahiya166@gmail.com"> muhammadyahiya166@gmail.com </a>
+          <a href="muhammadyahiya166@gmail.com">
+            muhammadyahiya166@gmail.com
+          </a>
         </div>
 
         <div class="nationWide">
@@ -349,18 +238,102 @@
 
       <div class="slider">
         <div class="owl-carousel owl-theme owwl">
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="./assets/Images/pic1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
         </div>
       </div>
 
