--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,7 +96,7 @@
             <li><a href="./aboutus.html">About Us</a></li>
             <li><a href="./services.html">Services</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="./contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="nav_right">
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <section class="quote">
+      <section class="quote" id="quote">
         <div class="container">
           <div class="quoteNote">
             <h3>Get your free Quote</h3>
@@ -438,7 +438,7 @@
         </form>
         <div class="policyTerms">
           <p>
-            By clicking Send, I agree to DBM Express's Privacy Policy and Terms
+            By clicking Send, I agree to House Mover Privacy Policy and Terms
             of Service.
           </p>
           <div>
@@ -448,7 +448,7 @@
               <i class="fa-brands fa-whatsapp fa-2xl"></i>
               <i class="fa-brands fa-instagram fa-2xl"></i>
             </div>
-            <a href="#"
+            <a href="#quote"
               >Get a free quote <i class="fa-solid fa-right-long"></i
             ></a>
           </div>
@@ -471,8 +471,9 @@
         </div>
 
         <div class="info">
-          <h4>02036 213141</h4>
-          <a href="#"> info@dbmexpress.co.uk </a>
+          <h4>Contact US</h4>
+          <a href="tel:0318-0126925"> 0318-0126925 </a>
+          <a href="muhammadyahiya166@gmail.com"> muhammadyahiya166@gmail.com </a>
         </div>
 
         <div class="nationWide">
@@ -486,32 +487,31 @@
 
       <div class="slider">
         <div class="owl-carousel owl-theme owwl">
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
-          <div class="item"><img src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
+          <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
         </div>
       </div>
 
       <div class="footerNav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Terms & Conditions</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./aboutus.html">About Us</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./gallery.html">Gallery</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © Copyright 2015-2023 DBM Express. All rights reserved. Original and
+          © Copyright 2023 House Mover. All rights reserved. Original and
           exclusive content.
         </p>
       </div>
